fix word wrapping for long path

--- a/client/src/App/App.css
+++ b/client/src/App/App.css
@@ -38,6 +38,7 @@ main {
 }
 
 .box-wrapper {
+  word-wrap: break-word;
   border-radius: 15px;
   background: rgba(54, 164, 170,0.8);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
